@@ -28,6 +28,8 @@ git-annex (6.20170102) UNRELEASED; urgency=medium
     case, this change will need to be cherry-picked into the git-annex in
     Debian stable, or its wormhole pairing will break.
   * Fix build with aws 0.16. Thanks, aristidb.
+  * assistant: Make --autostart --foreground wait for the children it
+    starts. Before, the --foreground was ignored when autostarting.
 
  -- Joey Hess <id@joeyh.name>  Fri, 06 Jan 2017 15:22:06 -0400
 
